<resources>

    <string name="app_name" translatable="false">Haze</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_weather">Weather</string>
    <string name="action_cities">Cities</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_detail">Detail</string>

    <string name="button_restart">Restart</string>

    <string name="nav_subheader">Others</string>

    <string name="text_current_location">Current Location</string>

    <!--HomeActivity-->
    <string name="title_activity_home">Home</string>
    <string name="title_empty_city">No Cities Here</string>
    <string name="dscpt_empty_city">You can enable location service to get the weather of your current city, or select a city from the city list.</string>
    <string name="btn_location_service">Location Service</string>
    <string name="btn_select_a_city">Select a City</string>
    <string name="toast_double_press_exit">Press once again to exit Haze</string>
    <string name="text_network_not_available">Network is not available</string>
    <string name="text_location_not_available">System location service is disabled</string>
    <string name="text_no_enough_permissions_granted">No enough permissions granted</string>
    <string name="title_dialog_permissions_denied">No Enough Permissions</string>
    <string name="msg_dialog_permissions_denied">AMap® Location Service can\'t get your location information without these permissions, but you can grant Haze these permissions later.</string>
    <string name="neu_btn_dialog_permissions_denied">Disable Location Service</string>

    <!-- WeatherFragment -->
    <string name="title_fragment_weather">Weather</string>

    <!--WeatherPageFragment-->
    <string name="text_update_time">Updated at %s</string>
    <string name="text_invalid_data">No data available</string>
    <string name="text_sensible_temp">Feels Like</string>
    <string name="text_temp_range">Temperature</string>
    <string name="text_air_quality">Air Quality</string>
    <string name="aqi_level_1">Excellent</string>
    <string name="aqi_level_2">Good</string>
    <string name="aqi_level_3">Light Pollution</string>
    <string name="aqi_level_4">Medium Pollution</string>
    <string name="aqi_level_5">Heavy Pollution</string>
    <string name="aqi_level_6">Severe Pollution</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_today">Today</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="text_updating">Updating</string>

    <!--CitiesFragment-->
    <string name="title_fragment_cities">Cities</string>
    <string name="title_dialog_city_deletion_confirmation">Are you sure?</string>
    <string name="msg_dialog_city_deletion_confirmation">The city \"%s\" will be deleted immediately</string>
    <string name="pos_btn_city_deletion_confirmation">Delete</string>
    <string name="toast_weather_update_requested">Weather updating requested</string>
    <string name="toast_weather_update_successfully">Weather updated successfully</string>
    <string name="toast_weather_update_failed">Weather updating failed</string>

    <!--CityAddActivity-->
    <string name="title_activity_add_city">Add A City</string>
    <string name="hint_editor_city_search">Search for cities</string>
    <string name="text_empty_result">No cities found</string>
    <string name="toast_city_exists">City exists</string>

    <!--SettingsActivity-->
    <string name="title_activity_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="title_dialog_reset_settings">Reset Settings?</string>
    <string name="msg_dialog_reset_settings">Settings will be reset to default, Haze will restart.</string>
    <string name="btn_dialog_reset_settings">Reset And Restart</string>

    <!--SettingsFragment-->
    <string name="pref_category_title_weather">Weather</string>
    <string name="pref_title_location_service">Location Service</string>
    <string name="pref_summary_location_service_on">AMap Location Service enabled</string>
    <string name="pref_summary_location_service_off">AMap Location Service disabled</string>

    <!--AboutActivity-->
    <string name="title_activity_about">About</string>
    <string name="text_app_full_name" translatable="false">Haze for Weather</string>
    <string name="text_developer" translatable="false">Written by Zack</string>
    <string name="title_feedback">Feedback</string>
    <string name="text_item_email">Send me an email</string>
    <string name="subject_developer_email">Email from a Haze User</string>
    <string name="toast_no_email_app_found">No email app found</string>
    <string name="text_item_rate">Rate this app if you like</string>
    <string name="toast_no_app_store_found">No app store found</string>
    <string name="title_thanks">Thanks</string>
    <string name="toast_no_link_app_found">No app can open a link</string>

    <!--GuideActivity-->
    <string name="title_activity_guide">Guide</string>
    <string name="title_page_welcome">Welcome</string>
    <string name="dscpt_page_welcome">Touch the right arrow to continue</string>
    <string name="title_page_ready">Guide Ends</string>
    <string name="dscpt_page_ready">Enjoy Haze</string>
    
    <!-- LocationGuidePageFragment -->
    <string name="title_page_location">Location Service</string>
    <string name="description_page_location_disabled">Enable AMap® Location Service to get the weather for your current place?</string>
    <string name="description_page_location_enabled">AMap® Location Service has been enabled successfully</string>
    <string name="btn_page_location">Enable</string>
    <string name="title_dialog_pre_enable_location_service">Permissions</string>
    <string name="msg_dialog_pre_enable_location_service">The AMap® Location Service requires 3 essential permissions that need you to grant, they are Location, Phone State and Storage. You will be notified before your location information is requested for the first time.</string>
    <string name="pos_btn_dialog_pre_enable_location_service">Continue</string>
    <string name="title_dialog_pre_request_permissions">Permissions</string>
    <string name="msg_dialog_pre_request_permissions">The AMap® Location Service requires 3 essential permissions that need you to grant, they are Location, Phone State and Storage. Let\'s do that.</string>
    <string name="pos_btn_dialog_pre_request_permissions">Continue</string>
    <string name="title_dialog_never_request_permissions_again">Permissions</string>
    <string name="msg_dialog_never_request_permissions_again">Please go to System Settings and grant Haze 3 essential permissions, they are Location, Phone State and Storage.</string>
    <string name="pos_btn_dialog_never_request_permissions_again">System Settings</string>

    <!-- AMap Location Error Code -->
    <string name="error_amap_location_error_code_minus_1">Returned a null object</string>
    <string name="error_amap_location_error_code_1">Some important parameters are empty</string>
    <string name="error_amap_location_error_code_2">Just one Wi-Fi scanned and no base station information</string>
    <string name="error_amap_location_error_code_3">The acquired request parameters are empty</string>
    <string name="error_amap_location_error_code_4">An exception occurred when requesting the server</string>
    <string name="error_amap_location_error_code_5">Request was maliciously hijacked</string>
    <string name="error_amap_location_error_code_6">Location service returned failure</string>
    <string name="error_amap_location_error_code_7">Invalid key</string>
    <string name="error_amap_location_error_code_8">Common exception</string>
    <string name="error_amap_location_error_code_9">An exception occurred during location initialization</string>
    <string name="error_amap_location_error_code_10">Location client failed to start</string>
    <string name="error_amap_location_error_code_11">Base station information error during location</string>
    <string name="error_amap_location_error_code_12">No location permission</string>
    <string name="error_amap_location_error_code_13">No Wi-Fi list and base station information and GPS is currently unavailable</string>
    <string name="error_amap_location_error_code_14">Bad GPS status</string>
    <string name="error_amap_location_error_code_15">Location results are simulated</string>
    <string name="error_amap_location_error_code_16">No available geofence</string>
    <string name="error_amap_location_error_code_18">No SIM card and Wi-Fi is turned off</string>
    <string name="error_amap_location_error_code_19">Wi-Fi is turned off and airplane mode is on</string>

    <!-- HeWeather Status -->
    <string name="error_heweather_status_invalid_key">Invalid key</string>
    <string name="error_heweather_status_unknown_city">Unknown or wrong city or area</string>
    <string name="error_heweather_status_no_data_for_this_location">No requested data for this city or area</string>
    <string name="error_heweather_status_no_more_requests">No more requests available</string>
    <string name="error_heweather_status_param_invalid">Invalid request parameters</string>
    <string name="error_heweather_status_too_fast">Request frequency is too high</string>
    <string name="error_heweather_status_dead">Service exception</string>
    <string name="error_heweather_status_permission_denied">Permission denied</string>
    <string name="error_heweather_status_sign_error">Wrong authentication signature</string>

    <!-- Other Network Error -->
    <string name="error_io_exception">Network connection error</string>
    <string name="error_http_exception">HTTP error</string>

</resources>
