<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:background="@color/colorPrimary"
    tools:context=".domain.fragment.GuideFragment">

    <ImageView
        android:id="@+id/image_guide"
        android:layout_width="160dp"
        android:layout_height="160dp"
        tools:src="@drawable/pic_cloud"/>

    <TextView
        android:id="@+id/title_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:text="@string/title_page_welcome"/>

    <TextView
        android:id="@+id/dscpt_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"
        tools:text="@string/dscpt_page_welcome"/>

    <Button
        android:id="@+id/btn_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        style="@style/Widget.AppCompat.Button.Colored"
        tools:text="@string/btn_page_location"/>
    
</LinearLayout>
