<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vSwipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.WeatherPageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/vCityNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="24sp"
                        android:textColor="@android:color/white"
                        tools:text="Deyang"/>

                    <ImageView
                        android:id="@+id/vLocationIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/vCityNameText"
                        android:src="@drawable/ic_location"
                        android:tint="@android:color/white"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/vConditionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    tools:text="Shower"/>

                <TextView
                    android:id="@+id/vTemperatureText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textSize="100sp"
                    android:textColor="@android:color/white"
                    android:typeface="monospace"
                    tools:text="22"/>

                <TextView
                    android:id="@+id/vUpdateTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="12sp"
                    android:textColor="@android:color/white"
                    tools:text="Updated at 2016-5-22 20:44"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLightDark"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/vFeelsLikeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"
                        tools:text="18°C"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_sensible_temp"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"/>

                </LinearLayout>

                <include layout="@layout/divider_v_color_p_dark"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/vTemperatureRangeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"
                        tools:text="15 | 30"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_temp_range"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"/>

                </LinearLayout>

                <include layout="@layout/divider_v_color_p_dark"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/vAirQualityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"
                        tools:text="Good"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_air_quality"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"/>

                </LinearLayout>

            </LinearLayout>

            <net.zackzhang.code.haze.widget.TemperatureTrendChartView
                android:id="@+id/vTemperatureTrendChart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/temp_trend_chart_height"
                app:week_text_size="8sp"
                app:week_text_color="@color/colorPrimary"
                app:condition_text_size="12sp"
                app:condition_text_color="@color/colorPrimary"
                app:temp_text_size="12sp"
                app:temp_text_color="@color/colorPrimary"
                app:temp_point_color="@color/colorPrimary"
                app:temp_point_edge_color="@color/colorPrimaryLight"
                app:temp_trend_line_color="@color/colorPrimary"/>

            <include layout="@layout/divider_h"/>

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>
